...
                    android:layout_marginBottom="6dp"
                    android:gravity="right"
                    android:text="Ime poslodavca: "
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>
...
                    android:ems="10"
                    android:inputType="textPassword" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:text="Spremi" />

...
