<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="Početni prozor"/>

        <item
            android:id="@+id/nav_edit_student"
            android:icon="@drawable/baseline_edit_24"
            android:title="Uredi podatke"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="Izbriši račun"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Odjava"/>
        </menu>

    </item>

</menu>